--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,26 @@
 /* Code derived and slightly edited from https://www.geeksforgeeks.org/html-calculator/ */
 
-.title {
-  margin-bottom: 10px;
-  text-align: center;
-  width: 210px;
-  color: green;
-  border: solid black 2px;
+body {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 input[type="button"] {
-  background-color: green;
-  color: black;
+  background-color: black;
+  color: white;
   border: solid black 2px;
-  width: 100%;
+  height: 40px;
+  width: 40px;
+  font-size: 30px;
 }
 
 input[type="text"] {
   background-color: white;
   border: solid black 2px;
-  width: 100%;
+  width: 130px;
+  height: 40px;
+  font-size: 30px;
 }
