--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
   height: 100%;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start; /* Mistake: value should be center */
 }
 
 input[type="button"] {
@@ -20,7 +20,7 @@ input[type="button"] {
 input[type="text"] {
   background-color: white;
   border: solid black 2px;
-  width: 130px;
-  height: 40px;
+  width: 200px; /* Mistake: dimensions should be 130px x 40px */
+  height: 60px; /* Mistake: dimensions should be 130px x 40px */
   font-size: 30px;
 }
